Neon database added "postgres". Schema created

--- a/.env
+++ b/.env
@@ -33,4 +33,4 @@ CLOUDWAYS_USERS_URL=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://seraai_owner:HKkFs1qT9ytA@ep-dark-base-a1h0l9nx.ap-southeast-1.aws.neon.tech/seraai?sslmode=require"
